--- a/WebRoot/css/wechat/style.css
+++ b/WebRoot/css/wechat/style.css
@@ -149,8 +149,7 @@ body.gray_bg {
 }
 
 main.contact_bg {
-	background: url(../../images/wechat/contact_banner.png) no-repeat center
-		top;
+	background: url(../../images/wechat/contact_banner.png) no-repeat center top;
 	background-size: contain;
 	padding-top: 3.8rem;
 }
@@ -371,8 +370,7 @@ a.sc_btn {
 	width: 1rem;
 	height: 0.66rem;
 	display: block;
-	background: url(../../images/wechat/icon_sc.png) no-repeat 0.4rem center
-		#792428;
+	background: url(../../images/wechat/icon_sc.png) no-repeat 0.4rem center #792428;
 	background-size: 0.36rem 0.34rem;
 	-webkit-border-radius: 0.33rem;
 	-moz-border-radius: 0.33rem;
@@ -454,8 +452,7 @@ div.sc_box {
 
 div.sc_box span {
 	display: inline-block;
-	background: url(../../images/wechat/icon_scred.png) no-repeat left
-		center;
+	background: url(../../images/wechat/icon_scred.png) no-repeat left center;
 	background-size: 0.36rem 0.34rem;
 	padding-left: 0.42rem;
 }
@@ -485,13 +482,12 @@ div.select_all input+label {
 	width: 100%;
 	height: 100%;
 	padding-left: 1.1rem;
-	background: url(../../images/wechat/all_unselect.png) no-repeat 0.6rem
-		center;
+	background: url(../../images/wechat/all_unselect.png) no-repeat 0.6rem center;
 	background-size: 0.4rem;
 }
 
 div.select_all input:checked+label {
-	background: url(../images/wechat/selected.png) no-repeat 0.6rem center;
+	background: url(../../images/wechat/selected.png) no-repeat 0.6rem center;
 	background-size: 0.4rem;
 }
 
@@ -518,14 +514,12 @@ div.single_select input+label {
 	display: inline-block;
 	width: 100%;
 	height: 100%;
-	background: url(../../images/wechat/unselect.png) no-repeat center
-		center;
+	background: url(../../images/wechat/unselect.png) no-repeat center center;
 	background-size: 0.4rem 0.4rem;
 }
 
 div.single_select input:checked+label {
-	background: url(../../images/wechat/selected.png) no-repeat center
-		center;
+	background: url(../../images/wechat/selected.png) no-repeat center center;
 	background-size: 0.4rem 0.4rem;
 }
 /*图片列表*/
@@ -625,8 +619,7 @@ div.edit_rank span {
 	display: inline-block;
 	padding-left: 0.3rem;
 	padding-right: 0.35rem;
-	background: url(../../images/wechat/icon_rank.png) no-repeat right
-		center;
+	background: url(../../images/wechat/icon_rank.png) no-repeat right center;
 	background-size: 0.24rem 0.26rem;
 }
 
@@ -651,14 +644,12 @@ p.single_all input+label {
 	display: block;
 	width: 0.4rem;
 	height: 0.4rem;
-	background: url(../../images/wechat/unselect.png) no-repeat center
-		center;
+	background: url(../../images/wechat/unselect.png) no-repeat center center;
 	background-size: 0.4rem 0.4rem;
 }
 
 p.single_all input:checked+label {
-	background: url(../../images/wechat/selected.png) no-repeat center
-		center;
+	background: url(../../images/wechat/selected.png) no-repeat center center;
 	background-size: 0.4rem 0.4rem;
 }
 /*我的收藏*/
@@ -760,22 +751,20 @@ div.sc_share>div {
 }
 
 div.scang {
-	background: url(../../images/wechat/icon_shc.png) no-repeat center
-		center;
+	background: url(../../images/wechat/icon_shc.png) no-repeat center center;
 	background-size: 0.36rem 0.34rem;
 	margin-bottom: 0.3rem;
 }
 
 div.scang.selected {
-	background: url(../../images/wechat/icon_shc1.png) no-repeat center
-		center rgba(0, 0, 0, .5);
+	background: url(../../images/wechat/icon_shc1.png) no-repeat center center
+		rgba(0, 0, 0, .5);
 	background-size: 0.36rem 0.34rem;
 	margin-bottom: 0.3rem;
 }
 
 div.share {
-	background: url(../../images/wechat/icon_share.png) no-repeat center
-		center;
+	background: url(../../images/wechat/icon_share.png) no-repeat center center;
 	background-size: 0.36rem 0.38rem;
 }
 /*图集*/
