--- a/WebRoot/js/easyui/themes/icon.css
+++ b/WebRoot/js/easyui/themes/icon.css
@@ -55,7 +55,9 @@
 .icon-filter{
 	background:url('icons/filter.png') no-repeat center center;
 }
-
+.icon-settings{
+	background:url('icons/settings.png') no-repeat center center;
+}
 
 .icon-mini-add{
 	background:url('icons/mini_add.png') no-repeat center center;
