--- a/WebRoot/js/jquery-easyui-1.4.1/themes/icon.css
+++ b/WebRoot/js/jquery-easyui-1.4.1/themes/icon.css
@@ -79,6 +79,9 @@
 .icon-lock_open{
 	background:url('icons/lock_open.png') no-repeat center center;
 }
+.icon-settings{
+	background:url('icons/settings.png') no-repeat center center;
+}
 
 .icon-mini-add{
 	background:url('icons/mini_add.png') no-repeat center center;
