--- a/WebRoot/resource/website/css/style.css
+++ b/WebRoot/resource/website/css/style.css
@@ -139,6 +139,7 @@ div.carpets_text{font-size: 16px; line-height: 36px; margin-bottom: 115px;}
 div.carpets_text p{text-indent: 32px;}
 .carpets_img ul {padding-left: 63px; padding-right: 63px;}
 .carpets_img ul li{float: left; width: 255px; height: 200px;  margin-right: 17px;}
+.carpets_img ul li div{cursor: pointer;}
 .carpets_img ul li img{width: 100%; height: 100%;}
 .carpets_img ul li:last-child{margin-right: 0;}
 /*印花地毯*/
@@ -147,10 +148,10 @@ div.carpets_text p{text-indent: 32px;}
 body.white_bg{background-color: #FFFFFF;}
 div.design_box{position: relative; height: 590px;}
 div.gray_bg{width: 50%; height: 545px; background-color: #f2f2f2; position: absolute;right: 0; top: 0;}
-a.design_left{display: block; width: 700px; height: 400px; position: absolute; left: 0; top: 75px; z-index: 1;}
-a.design_left img{width: 100%; height: 100%;}
-a.design_right{display: block; width: 400px; height: 390px; background-color: #FFFFFF; padding-top: 75px; padding-bottom: 75px; position: absolute; right: 0; top: 162px; z-index: 10;}
-a.design_right img{width: 100%; height: 100%;}
+div.design_left{display: block; width: 700px; height: 400px; position: absolute; left: 0; top: 75px; z-index: 1;}
+div.design_left img{width: 100%; height: 100%;}
+div.design_right{display: block; width: 400px; height: 390px; background-color: #FFFFFF; padding-top: 75px; padding-bottom: 75px; position: absolute; right: 0; top: 162px; z-index: 10;}
+div.design_right img{width: 100%; height: 100%;}
 div.design_title{width: 30px; position: absolute; left: 736px;top: 352px; font-size: 28px; line-height: 1.1;}
 div.design_title:before{content: ""; display: block; position: absolute; width: 2px; height: 260px; background-color: #797979; left: 50%; margin-top: -15px;top: -261px}
 /*设计图册*/
@@ -171,6 +172,11 @@ div.case_list a{ display: block; width: 285px; padding: 10px; border: 1px solid 
 div.case_list a:nth-child(4n){margin-right: 0;}
 div.case_list a:hover:after{width: 100%; height: 3px; background-color: #74191D; content: ""; display: block; position: absolute; bottom: -1px; left: 0;}
 div.case_list a img{width: 265px; height: 198px; margin-bottom: 25px;}
+
+div.case_list div{ display: block; width: 285px; padding: 10px; border: 1px solid #e6e6e6; margin-right: 20px; margin-bottom: 20px; float: left; position: relative;  cursor: pointer;}
+div.case_list div:nth-child(4n){margin-right: 0;}
+div.case_list div:hover:after{width: 100%; height: 3px; background-color: #74191D; content: ""; display: block; position: absolute; bottom: -1px; left: 0;}
+div.case_list div img{width: 265px; height: 198px; margin-bottom: 25px;}
 p.case_name{font-size: 16px; margin-bottom: 8px; padding-left: 12px; padding-right: 12px; width: 100%; height: 24px; overflow: hidden; text-overflow: ellipsis; white-space: nowrap;}
 p.case_number{font-size: 16px; margin-bottom: 15px; padding-left: 12px; padding-right: 12px; width: 100%; height: 24px; overflow: hidden; text-overflow: ellipsis; white-space: nowrap; color: #999999;}
 /*经典案例*/
