--- a/WebRoot/resource/website/css/style.css
+++ b/WebRoot/resource/website/css/style.css
@@ -179,6 +179,14 @@ div.case_list div:hover:after{width: 100%; height: 3px; background-color: #74191
 div.case_list div img{width: 265px; height: 198px; margin-bottom: 25px;}
 p.case_name{font-size: 16px; margin-bottom: 8px; padding-left: 12px; padding-right: 12px; width: 100%; height: 24px; overflow: hidden; text-overflow: ellipsis; white-space: nowrap;}
 p.case_number{font-size: 16px; margin-bottom: 15px; padding-left: 12px; padding-right: 12px; width: 100%; height: 24px; overflow: hidden; text-overflow: ellipsis; white-space: nowrap; color: #999999;}
+
+/*平面图*/
+div.pingtu{width: 320px; height: 270px; position: absolute; background-color: #fde8c8; right: 0; bottom: 0; }
+h3.ping_title{height: 60px; line-height: 60px; background-color: #f7a62b; color: #FFFFFF; font-size: 24px; text-align: center; margin-bottom: 9px;}
+h3.ping_title span{display: inline-block; background: url(../img/ping_icon.png) no-repeat left center; padding-left: 38px;}
+div.pingtu img{width: 305px; height: 191px;}
+
+/*平面图*/
 /*经典案例*/
 
 /*设计团队*/
@@ -190,7 +198,7 @@ h2.team_title{color: #74191D; text-align: left; font-weight: bold; font-size: 60
 h2.team_title span{color: #74191D; font-size: 36px;}
 h2.team_title:after{background-color: #74191D; left: 0; margin-left: 0;}
 div.big_box{position: relative;  width: 600px; height: 840px; margin: 156px auto 0;}
-div.big_box:after{content: ""; display: block; position: absolute; right: 0; bottom: 0; background-color: #74191D; width: 300px; height: 300px;} 
+/* div.big_box:after{content: ""; display: block; position: absolute; right: 0; bottom: 0; background-color: #74191D; width: 300px; height: 300px;} */ 
 div.person_box ul li{position: absolute; width: 300px; height: 300px; cursor: pointer; }
 div.person_box ul li.selected img{border: 6px solid #74191D; }
 li.smallimg1{left: 300px; top: 0;}
