--- a/WebRoot/resource/website/css/jquery.fs.boxer.css
+++ b/WebRoot/resource/website/css/jquery.fs.boxer.css
@@ -29,7 +29,7 @@
 	#boxer .boxer-iframe { float: left; height: 100%; overflow: auto; width: 100%; }
 	#boxer .boxer-meta { clear: both; }
 	
-	#boxer .boxer-arrow {  border-radius: 100%;   cursor: pointer; display: block; height: 48px; margin-right: auto; margin-left: auto; position: absolute; text-indent: -99999px; top: 0; width: 48px; 
+	#boxer .boxer-arrow {  border-radius: 100%;   cursor: pointer; display: block; height: 48px; margin-right: auto; margin-left: auto; position: absolute; text-indent: -99999px; top: 0; width: 48px;z-index:9999;
 		-webkit-transition: opacity 0.1s linear;
 		   -moz-transition: opacity 0.1s linear;
 		   	-ms-transition: opacity 0.1s linear;
