微信端放大缩小

--- a/WebRoot/css/wechat/style.css
+++ b/WebRoot/css/wechat/style.css
@@ -538,7 +538,7 @@ h1.time {
 	margin-left: 4%;
 	margin-right: 4%;
 	margin-bottom: 0.2rem;
-	margin-top: 0.38rem;
+	/* margin-top: 0.38rem; */
 	position: relative;
 }
 
