--- a/WebRoot/css/wechat/style.css
+++ b/WebRoot/css/wechat/style.css
@@ -767,5 +767,19 @@ div.share {
 	background: url(../../images/wechat/icon_share.png) no-repeat center center;
 	background-size: 0.36rem 0.38rem;
 }
-.pinch-zoom-container{height: 100%!important;}
 /*图集*/
+
+
+/*loading 动画*/
+@-webkit-keyframes line-scale {0% {-webkit-transform: scaley(1);transform: scaley(1);}50% {-webkit-transform: scaley(0.4);transform: scaley(0.4);}100% {-webkit-transform: scaley(1);transform: scaley(1);}}
+@keyframes line-scale {0% {-webkit-transform: scaley(1);transform: scaley(1);}50% {-webkit-transform: scaley(0.4);transform: scaley(0.4);}100% {-webkit-transform: scaley(1);transform: scaley(1);}}
+.line-scale> div:nth-child(1) {-webkit-animation: line-scale 1s 0.1s infinite cubic-bezier(.2, .68, .18, 1.08);animation: line-scale 1s 0.1s infinite cubic-bezier(.2, .68, .18, 1.08);}
+.line-scale> div:nth-child(2) {-webkit-animation: line-scale 1s 0.2s infinite cubic-bezier(.2, .68, .18, 1.08);animation: line-scale 1s 0.2s infinite cubic-bezier(.2, .68, .18, 1.08);}
+.line-scale> div:nth-child(3) {-webkit-animation: line-scale 1s 0.3s infinite cubic-bezier(.2, .68, .18, 1.08);animation: line-scale 1s 0.3s infinite cubic-bezier(.2, .68, .18, 1.08);}
+.line-scale> div:nth-child(4) {-webkit-animation: line-scale 1s 0.4s infinite cubic-bezier(.2, .68, .18, 1.08);animation: line-scale 1s 0.4s infinite cubic-bezier(.2, .68, .18, 1.08);}
+.line-scale> div:nth-child(5) {-webkit-animation: line-scale 1s 0.5s infinite cubic-bezier(.2, .68, .18, 1.08);animation: line-scale 1s 0.5s infinite cubic-bezier(.2, .68, .18, 1.08);}
+.line-scale> div {background-color: #00a1e3;width: 0.04rem;height: 0.35rem;border-radius: 2px;margin: 2px;-webkit-animation-fill-mode: both;animation-fill-mode: both;display: inline-block;}
+div.load{position: absolute; left: 50%; top: 50%; margin-top: -0.21rem; margin-left: -0.36rem;}
+/*loading 动画*/
+
+div.container{opacity: 0;}
